--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:hrod.open"
+		"onCommand:hrod.open",
+		"onCommand:hrod.model"
 	],
 	"main": "./extension.js",
 	"contributes": {
@@ -18,6 +19,10 @@
 			{
 				"command": "hrod.open",
 				"title": "Open cobalt files"
+			},
+			{
+				"command": "hrod.model",
+				"title": "Open model files"
 			}
 		]
 	},
@@ -34,5 +39,8 @@
 		"mocha": "^6.1.4",
 		"typescript": "^3.3.1",
 		"vscode-test": "^1.0.2"
+	},
+	"dependencies": {
+		"cheerio": "^1.0.0-rc.3"
 	}
 }
