--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"vscode-test": "^1.0.2"
 	},
 	"dependencies": {
-		"cheerio": "^1.0.0-rc.3"
+		"cheerio": "^1.0.0-rc.3",
+		"ramda": "^0.26.1"
 	}
 }
